--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,18 @@ services:
     depends_on:
       - database
     environment:
-      KEY: '255d861b-5ea1-5996-9aa3-922530ec40b1'
-      SECRET: '6116487b-cda1-52c2-b5b5-c8022c45e263'
+      KEY: '255d861b-5ea1-5996-9aa3-922530ec40b1' # use a random
+      SECRET: '6116487b-cda1-52c2-b5b5-c8022c45e263' # use a random
+      CORS_ENABLED: "true"
+      CORS_ORIGIN: "true"
       DB_CLIENT: pg
       DB_HOST: database
       DB_PORT: 5432
       DB_DATABASE: directus
       DB_USER: directus
-      DB_PASSWORD: directus
+      DB_PASSWORD: directus # use a safe password
       ADMIN_EMAIL: 'admin@example.com'
-      ADMIN_PASSWORD: 'd1r3ctu5'
+      ADMIN_PASSWORD: 'd1r3ctu5' # use a safe password
 
   database:
     image: postgis/postgis:14-master
@@ -36,7 +38,7 @@ services:
       - directus
     environment:
       POSTGRES_USER: directus
-      POSTGRES_PASSWORD: directus
+      POSTGRES_PASSWORD: directus # use a safe password
       POSTGRES_DB: directus
 
 networks:
