--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "npm": "20.10.0",
-    "node": "10.2.3"
+    "node": ">=20.10.0",
+    "npm": ">=10.2.3"
   },
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "@tanstack/solid-query": "^5.17.8",
     "dayjs": "^1.11.10",
     "solid-js": "^1.8.7",
+    "solid-toast": "^0.5.0",
     "solid-zustand": "^1.7.1",
     "tailwindcss-ripple": "^0.7.1",
     "valibot": "^0.25.0"
