--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=10.2.3"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "format": "biome format . --write",
@@ -18,7 +18,7 @@
     "@directus/sdk": "^14.0.0",
     "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.10.9",
-    "@tanstack/solid-query": "^5.17.10",
+    "@tanstack/solid-query": "^5.17.19",
     "@thisbeyond/solid-select": "^0.14.0",
     "dayjs": "^1.11.10",
     "solid-icons": "^1.1.0",
@@ -29,11 +29,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11",
+    "vite": "^5.0.12",
     "vite-plugin-compression2": "^0.11.0",
-    "vite-plugin-solid": "^2.8.0"
+    "vite-plugin-solid": "^2.8.2"
   }
 }
